Fix background scaling on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
-    background-image: url("bg.png");
+    height: 100%;
+    background-image: url("bg1.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
